syntax = "proto3";

package proto;

import "common.proto";

option go_package = "pkg/proto";




message Post {
  int32 id = 1;
  string title = 2;
  string content = 3;
  int32 user_id = 4;
}

message PostRequest {
  int32 id = 1;
  string title = 2;
  string content = 3;
  int32 user_id = 4;
  int32 limit = 5;
}

message PostResponse {
  int64 page = 1;
  int64 page_count = 2;
  int64 total = 3;
  repeated Post data = 4;
}


service PostService {
  rpc GetPostStream(PostRequest) returns (stream Post) {}
  rpc CreatePost (PostRequest) returns (Empty) {}
  rpc GetAllPosts (PostRequest) returns ( PostResponse) {}
  rpc GetPost (PostRequest) returns (Post) {}
} 
